# kujira-cw-template

./: .gitignore  Cargo.toml
contracts/template-contract/: Cargo.toml
contracts/template-contract/src/: contract.rs  helpers.rs
